{
  "version": 4,
  "terraform_version": "0.13.7",
  "serial": 23,
  "lineage": "5b39fa93-ef0c-850c-79b8-ee79db113d81",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180571538167:internet-gateway/igw-0edde1344309d07c6",
            "id": "igw-0edde1344309d07c6",
            "owner_id": "180571538167",
            "vpc_id": "vpc-066296a72e6955199"
          },
          "dependencies": [
            "aws_vpc.homework4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_homework4_vpc_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180571538167:route-table/rtb-0ada4ec65a09baad2",
            "id": "rtb-0ada4ec65a09baad2",
            "owner_id": "180571538167",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0edde1344309d07c6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_homework4_vpc_public"
            },
            "tags_all": {
              "Name": "rt_homework4_vpc_public"
            },
            "vpc_id": "vpc-066296a72e6955199"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.homework4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0828b8897625d2b75",
            "route_table_id": "rtb-0ada4ec65a09baad2",
            "subnet_id": "subnet-0b38b34efe0b561f8"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_homework4_vpc_public",
            "aws_subnet.public",
            "aws_vpc.homework4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_hw4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180571538167:security-group/sg-06a3864236de3788e",
            "description": "Allow inbound web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All networks allowed",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a3864236de3788e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All networks allowed",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_hw4_traffic",
            "name_prefix": "",
            "owner_id": "180571538167",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-066296a72e6955199"
          },
          "dependencies": [
            "aws_vpc.homework4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180571538167:subnet/subnet-0d230afa11f20502b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0d230afa11f20502b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180571538167",
            "tags": {
              "Name": "homework4_vpc_private"
            },
            "tags_all": {
              "Name": "homework4_vpc_private"
            },
            "vpc_id": "vpc-066296a72e6955199"
          },
          "dependencies": [
            "aws_vpc.homework4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180571538167:subnet/subnet-0b38b34efe0b561f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b38b34efe0b561f8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "180571538167",
            "tags": {
              "Name": "homework4_vpc_public"
            },
            "tags_all": {
              "Name": "homework4_vpc_public"
            },
            "vpc_id": "vpc-066296a72e6955199"
          },
          "dependencies": [
            "aws_vpc.homework4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "homework4_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180571538167:vpc/vpc-066296a72e6955199",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0459f923e238f5f25",
            "default_route_table_id": "rtb-0730200975f275dc1",
            "default_security_group_id": "sg-06440730d385b33b7",
            "dhcp_options_id": "dopt-17d1f86d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-066296a72e6955199",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0730200975f275dc1",
            "owner_id": "180571538167",
            "tags": {
              "Name": "homework4_vpc"
            },
            "tags_all": {
              "Name": "homework4_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.mysql_Instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ee02acd56a52998e",
            "arn": "arn:aws:ec2:us-east-1:180571538167:instance/i-0442795803389b9fd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0442795803389b9fd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-keys",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-020dfc52382bd973e",
            "private_dns": "ip-10-0-1-218.ec2.internal",
            "private_ip": "10.0.1.218",
            "public_ip": "34.239.108.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ac8b2d183ce29e82",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-06a3864236de3788e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b38b34efe0b561f8",
            "tags": {
              "Name": "MySQL-p-HW4"
            },
            "tags_all": {
              "Name": "MySQL-p-HW4"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06a3864236de3788e"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraform-keys",
            "aws_security_group.allow_hw4",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.wordpress_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ee02acd56a52998e",
            "arn": "arn:aws:ec2:us-east-1:180571538167:instance/i-0faaa7542b7100810",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0faaa7542b7100810",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-keys",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-088d18349b487af45",
            "private_dns": "ip-10-0-1-85.ec2.internal",
            "private_ip": "10.0.1.85",
            "public_ip": "54.158.64.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02547f9a4fb8a0bed",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-06a3864236de3788e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b38b34efe0b561f8",
            "tags": {
              "Name": "wordpress-HW4"
            },
            "tags_all": {
              "Name": "wordpress-HW4"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06a3864236de3788e"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraform-keys",
            "aws_security_group.allow_hw4",
            "aws_subnet.public",
            "module.mysql_Instance.aws_instance.mysql-public"
          ]
        }
      ]
    }
  ]
}